[package]
name = "scrap2md"
version = "0.1.0"
edition = "2021"
authors = ["Nanamiiiii <nanami@myuu.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
sb2md_converter = { git = "https://github.com/Nanamiiiii/sb2md-rs", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
